--- a/css/controller.scss
+++ b/css/controller.scss
@@ -129,11 +129,11 @@ $selected-color: blue;
       height: 5px;
       background: $selected-color;
     }
-    .left {
+    .left-bumper {
       left: 27px;
     }
 
-    .right {
+    .right-bumper {
       left: 287px;
     }
   }
