add background color

--- a/css/controller.scss
+++ b/css/controller.scss
@@ -1,5 +1,9 @@
 $selected-color: blue;
 
+body {
+  background-color: orange;
+}
+
 .snes-controller {
   background-image: url("../assets/snes-controller.png");
   width: 566px;
