--- a/css/controller.css
+++ b/css/controller.css
@@ -1,3 +1,6 @@
+body {
+  background-color: orange; }
+
 .snes-controller {
   background-image: url("../assets/snes-controller.png");
   width: 566px;
